# llm-zoomcamp-2026-project

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  rag_graph.py  retrieval.py
app/.chainlit/: config.toml
app/public/: custom.css
db/: init.sql
docs/: architecture.md  configuration.md  evaluation.md  screenshots.md
eval/: ground_truth.json  llm_results.md  retrieval_results.md
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: llm_monitor.json  tables.json
grafana/provisioning/datasources/: postgres.yml
scripts/: clear_db.py  drop_db.py  evaluate_retrieval.py  generate_eval_questions.py  ingest_wikivoyage.py  seed_db.py
src/: config.py  embedding.py  fixtures.py  logger.py  query_rewrite.py
src/app/: chainlit.md  db.py  main.py  rag_graph.py  retrieval.py
src/app/.chainlit/: config.toml
src/db/: __init__.py  connection.py  conversations.py  rag_data.py
src/evaluation/: ground_truth.py  llm_judge.py  retrieval.py
src/ingestion/: fixtures.py  ingestor.py  wikivoyage.py
src/scripts/: clear_db.py  drop_db.py  evaluate_llm.py  evaluate_retrieval.py  generate_eval_questions.py  ingest_fake_db.py  ingest_wikivoyage.py  rag_ingestor.py  seed_db.py
src/tests/: test_chunking.py  test_query_rewrite.py  test_rag_agent_routing.py  test_rag_repository.py  test_retrieval_eval.py
