[project]
name = "course-assistant"
version = "0.1.0"
description = "LLM Zoomcamp 2026 course project: RAG course assistant"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "faker>=26.0",
    "requests>=2.32",
    "fastembed>=0.4",
    "openai>=1.50",
]

[tool.uv]
package = false
